<resources>
    <string name="app_name">In Time</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_active_days">MTWTFSS</string>
    <string name="placeholder_alarm_locations">Home - Work</string>
    <string name="is_active_content_desc">Image to display if the alarm is active or not.</string>
    <string name="placeholder_active_day_m">M</string>
    <string name="placeholder_active_day_tu">T</string>
    <string name="placeholder_active_day_w">W</string>
    <string name="placeholder_active_day_th">T</string>
    <string name="placeholder_active_day_f">F</string>
    <string name="placeholder_active_day_sa">S</string>
    <string name="placeholder_active_day_su">S</string>
    <string name="test_service_call">Beta Evaluation</string>
    <string name="add_alarm_lbl">Alarm</string>
    <string name="change_time">Change</string>
    <string name="saveBtn">Save</string>
    <string name="repeat">Repeat:</string>
    <string name="current_set_time">Current Set Time:</string>
    <string name="lable">Lable</string>
    <string name="address_placeholder">123 Fake Street</string>
    <string name="my_locations">My Locations</string>
    <string name="location_lbl">Locations</string>
    <string name="add">Add</string>
    <string name="add_location_lbl">Add Location</string>
    <string name="lable_lb">Label</string>
    <string name="longitude_lbl">Longitude</string>
    <string name="latitude_lbl">Latitude</string>
    <string name="add_location_btn">Add Location</string>
    <string name="address_lbl">Address</string>
    <string name="notification_title">Alarm Activated</string>
    <string name="notifivation_message">Alarm Activation Message</string>
    <string name="test_notification">Test Notification</string>
    <string name="lbl_smart_alarm">Smart Alarm:</string>
    <string name="radio_smart_yes_string">Yes</string>
    <string name="radio_smart_no_string">No</string>
    <string name="to_spinner_lbl">To:</string>
    <string name="from_spinner_lbl">From:</string>
    <string name="spinner_add_location"><![CDATA[<Add Location>]]></string>
    <string name="due_time_lbl">Due Time:</string>
    <string name="ispublic_lbl">Transport:</string>
    <string name="radio_ispublic_no_string">Private</string>
    <string name="radio_ispublic_yes_string">Public</string>
    <string name="complete_all_fields">All fields must be completed</string>
    <string name="change_label_dialog_negative_btn">Cancel</string>
    <string name="change_label_dialog_positive_btn">Save</string>
    <string name="change_label_dialog_title">Change Location Label</string>
    <string name="change_label_hint">Title...</string>
    <string name="tmodes_lbl">Modes:</string>
    <string name="placeholder_tram">Tram</string>
    <string name="placeholder_train">Train</string>
    <string name="placeholder_bus">Bus</string>
    <string name="stats_dialog_title">Provide Anonymous Usage Data?</string>
    <string name="stats_dialog_message">Anonymous location data will be taken at the time you should arrive at a location. This data will be used to help improve the service in the future.</string>
    <string name="stats_dialog_positive_btn">Yes</string>
    <string name="stats_dialog_negative_btn">No</string>
    <string name="prepTime_lbl">Prep Time:</string>
    <string name="prepTimeError">Prep Time field must be completed</string>
    <string name="preptime_hint">Mins to get ready..eg 30</string>
    <string name="eval_start">Start</string>
    <string name="eval_stop">Stop</string>
    <string name="notification_app_name">In Time Alarm</string>
    <string name="notification_btn">Stop Alarm</string>
</resources>
