<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.intimealarm.conor.intime_app.AddLocationActivity">

    <!-- Location Lable-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lable_lb"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/loc_add_lable" />

    <!-- Address -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/address_lbl"
        android:ems="10"
        android:id="@+id/loc_add_address"
        android:layout_below="@+id/loc_add_lable"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <!-- Latitude -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|number|numberSigned"
        android:ems="10"
        android:hint="@string/latitude_lbl"
        android:layout_below="@+id/loc_add_address"
        android:layout_alignParentStart="true"
        android:id="@+id/loc_add_lat"
        android:layout_alignParentEnd="true" />

    <!-- Longitude -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|number|numberSigned"
        android:ems="10"
        android:hint="@string/longitude_lbl"
        android:layout_below="@+id/loc_add_lat"
        android:layout_alignParentStart="true"
        android:id="@+id/loc_add_lng"
        android:layout_alignParentEnd="true" />

    <!-- Add Location Button-->
    <Button
        android:text="@string/add_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/loc_add_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Colored" />

</RelativeLayout>
